# UnBiasAI

./: .env  .gitignore  NOTICE  README.md  pyproject.toml  requirements.txt
data/: data_raw_test.csv  dataset-retrieval-spelling.csv  dataset_retrieval_language.csv  dataset_retrieval_length.csv  dataset_retrieval_recency.csv  grammar_test.csv  grammar_test_incl_category.csv  language_test.csv  length_test.csv  recency_test.csv  retrieval_recency.csv  sharepoint_docs.csv
n8n config/: Chatbot architecture.json  Data retriveal architecture.json
notebooks/: hallucination.ipynb  reinforcement.ipynb  retrieval_grammar.ipynb  retrieval_language.ipynb  retrieval_length.ipynb  retrieval_recency.ipynb  retrieval_results.json  sentiment_analysis.ipynb  vincent_retrieval_recency.ipynb
notebooks/halucination/: Hallucination_Bias.ipynb
notebooks/language/: Language_Human_Feedback_figures.ipynb  language_bias_analysis.py
notebooks/reinforcement/: Reinforcement_Bias.ipynb  Reinforcement_Bias_figures (1).ipynb  Reinforcement_bias_.ipynb
notebooks/retrieval/: Retrieval_Bias_Grammer.ipynb  Retrieval_Bias_Language.ipynb  Retrieval_Bias_Length.ipynb  Retrieval_Bias_Recency.ipynb  recency.ipynb
src/dtsc_queries/: hallucination.py  language.py  reinforcement.py  retrieval-spelling.py  retrieval_language.py  retrieval_length.py  retrieval_recency.py  sentiment_analysis.py
src/queries/: retrieval_recency.py
src/unbiasai/: config.py  connection.py  language.py  marco_utils.py  utils.py
tests/: test_generate_embedding  test_get_embedding  test_utils.py
(+1 files in other folders)
