[project]
name = "unbiasai"
version = "0.1.0"
description = ""
authors = [
    {name = "Shreya Bhattacharya", email = "shreya.bhattacharya@dtsc.be"},
    {name = "Vincent Hagenow", email = "vincent.hagenow@dtsc.be"},
    {name = "Marco Di Gennaro", email = "marco.digennaro@dtsc.be"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic (>=0.50.0,<0.51.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "ipython (>=9.2.0,<10.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "autopep8 (>=2.3.2,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "pytest-cov (>=6.1.1,<7.0.0)"
]

[tool.poetry]
packages = [{include = "unbiasai", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
